--- a/StoryFinder/app/build.gradle
+++ b/StoryFinder/app/build.gradle
@@ -27,14 +27,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
-<<<<<<< HEAD
     compile 'com.android.support:design:25.0.1'
-=======
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
-    //compile 'com.android.support:cardview-v7:25.0.1'
->>>>>>> 16adba91b9983480c31fb52a3bbe00ee22d7f6a2
-    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:25.0.1'
+//    compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.volley:volley:1.0.0'
     //compile 'com.android.support:cardview-v7:25.0.1'
     //compile 'com.android.support:recyclerview-v7:21.0.+'
