--- a/StoryFinder/app/src/main/AndroidManifest.xml
+++ b/StoryFinder/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".StoryActivity">
+        <activity
+            android:name=".StoryActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
         <activity android:name=".SingleFragmentActivity">
