--- a/StoryFinder/app/src/main/AndroidManifest.xml
+++ b/StoryFinder/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-sdk android:minSdkVersion="18"/>
+    <!--<uses-sdk android:minSdkVersion="18"/>-->
 
     <application
         android:name=".App"
@@ -20,14 +20,14 @@
             android:name=".SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
-        </activity>
-
-        <activity android:name=".StoryListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity android:name=".StoryListActivity">
         </activity>
 
         <activity
